fix: improve input visibility with higher contrast

--- a/src/components/inputs.css
+++ b/src/components/inputs.css
@@ -1,6 +1,6 @@
 :where(input:not([type="range"])) {
   background-color: var(--surface-0);
-  box-shadow: var(--shadow-2), 0 0 1px 1px var(--surface-2);
+  box-shadow: var(--shadow-2), 0 0 1px 1px var(--surface-3);
   padding-inline: var(--size-relative-3);
   padding-block: var(--size-relative-2);
   border-radius: var(--default-radius);
@@ -78,7 +78,7 @@
   padding-inline: var(--size-relative-3);
   padding-block: var(--size-relative-2);
   border-radius: var(--default-radius);
-  box-shadow: var(--shadow-2), 0 0 1px 1px var(--surface-2);
+  box-shadow: var(--shadow-2), 0 0 1px 1px var(--surface-3);
   background-color: var(--surface-1);
   border: var(--border-size-1) solid transparent;
 
