--- a/src/components/radios.css
+++ b/src/components/radios.css
@@ -44,7 +44,7 @@
     height: var(--size-relative-5);
     width: var(--size-relative-5);
     background-color: var(--surface-0);
-    box-shadow: var(--shadow-2), 0 0 1px 1px var(--surface-2);
+    box-shadow: var(--shadow-2), 0 0 1px 1px var(--surface-3);
     border-radius: 50%;
     transition: background-color 300ms ease-in-out;
 
